update consisttent hash background

--- a/algorithm/10.consistent_hashing.md
+++ b/algorithm/10.consistent_hashing.md
@@ -1,6 +1,14 @@
 https://www.acodersjourney.com/system-design-interview-consistent-hashing/
 
+# Problem description
+In hash scenario, there a key will be converted to numerical value by hash function like MD5, SHA-256, SHA etc.
+Then we can use it to do modulus operation to the index which indicating the target spot like DB instance, redis instance, bucket of array etc.
+And in the DB/Redis scenario, we call this distribution storage to dramatically increase the throughput of the system.
 
+1. what happen if db/redis instance failed?
+2. what happen if we need to scale-out?
+
+# Design Target
 1. we should be able to distribute incoming request uniformly among the set of n database servers;
 2. we should be able to dynamically add/remove database servers;
 3. when we add/remove a database servers, we need to move minimal amount of data between database servers;
